# mkfusion

./: .gitignore  README.FIRST  README.md  astyle-wrong-formatting.txt  astyle.sh  backup.bat  backup.sh  build_debs.sh  buildall.bat  buildall.sh  generate_zip.bat  generate_zip.sh  mkfusion_project.dia
DEBIAN/: control  postinst
WINDOWS/: .gitignore  cfeditor.iss  mkfusion.iss
debian/: changelog  control  mkfusion.postinst  mkfusion.prerm  rules
install/: mkfusion.conf  mkfusion.db  mkfusion.load
install/ubuntu/: cfeditor_control  cfeditor_postinst  mkfusion_control  mkfusion_init  mkfusion_init_mkfusion  mkfusion_mkfusion.conf  mkfusion_postinst  mkfusion_prerm
install/ubuntu/mkfusion/DEBIAN/: control  prerm
install/windows/: .gitignore  cfeditor.bat  cfeditor.iss  mkfusion.bat  mkfusion.iss
libs/: NOTE.txt
libs/iis/: .gitignore
libs/libssh/: .gitignore
libs/qtservice/: .gitignore  qtservice.cpp  qtservice.h  qtservice_p.h  qtservice_unix.cpp  qtservice_win.cpp  qtunixserversocket.h  qtunixsocket.h
src/: .gitignore  CMakeLists.txt  mkfusion.pro
src/cfeditor/: .gitignore  CMakeLists.txt  TODOS  cfeditor.pro  cfeditor.qrc  cfeditor.rc  main.cpp  qadvancedtextedit.cpp  qadvancedtextedit.h  qadvancedtreewidget.cpp  qadvancedtreewidget.h  qappmainwindow.cpp  qappmainwindow.h  qappmainwindow.ui  qftpproject.cpp  qftpproject.h  qlocalproject.cpp  qlocalproject.h  qproject.cpp  qproject.h  qprojectfile.cpp  qprojectfile.h  qprojectproperties.cpp  qprojectproperties.h  qprojectproperties.ui  qrdsproject.cpp  qrdsproject.h  qsftpproject.cpp  qsftpproject.h  resource.h
src/cfeditor/codeeditwidget/: breakpoint.cpp  breakpoint_disabled.cpp  breakpoint_pending.cpp  qcodeeditwidget.cpp  qcodeeditwidget.h
src/cfeditor/rds/: qabstractrdsservice.cpp  qabstractrdsservice.h  qcfdebugger.cpp  qcfdebugger.h  qdatabaseservice.cpp  qdatabaseservice.h  qdebuggerservice.cpp  qdebuggerservice.h  qdefaultservice.cpp  qdefaultservice.h  qfileioservice.cpp  qfileioservice.h  qrdsserver.cpp  qrdsserver.h  qwddx.cpp  qwddx.h  qwddxutils.cpp  qwddxutils.h
src/cfparser/: TODOS  qcf8.cpp  qcf8.h  qcffunction.cpp  qcffunction.h  qcfparser.cpp  qcfparser.h  qcftag.cpp  qcftag.h
src/mkfusion/: mkfusion.pro
src/mkfusion/appserver/: .gitignore  TODOS  UpdateFiles.bat  appserver.pro  cffunctions.cpp  cffunctions.h  cftags.h  common.cpp  common.h  gdb.txt  install.sh  main.cpp  mkfusion.h  qcfapplication.cpp  qcfapplication.h  qcfapplicationmanager.cpp  qcfapplicationmanager.h  qcfcompiler.cpp  qcfcompiler.h  qcfdatabaseconnection.cpp  qcfdatabaseconnection.h  qcfdatabasepoolmanager.cpp  qcfdatabasepoolmanager.h  qcfgenerator.cpp  qcfgenerator.h  qcflog.cpp  qcflog.h  qcfrunningtemplate.cpp  qcfrunningtemplate.h  qcfschedulerthread.cpp  qcfschedulerthread.h  qcfserver.cpp  qcfserver.h  qcfsession.h  qcfsessionmanager.cpp  qcfsessionmanager.h  qcfsettings.cpp  qcfsettings.h  qcfsettingsmanager.cpp  qcfsettingsmanager.h  (+22 more)
src/mkfusion/appserver/qcfvariant/: qcfvariant.cpp  qcfvariant.h  qcfvariantargument.cpp  qcfvariantargument.h  qcfvariantcomponent.cpp  qcfvariantcomponent.h  qcfvariantfunction.cpp  qcfvariantfunction.h
src/mkfusion/appserver/qwddx/: qwddx.cpp  qwddxargument.cpp  qwddxargument.h  (+3 more)
src/mkfusion/mkfusion_generator/: main.cpp  mkfusion_generator.pro  qcfcomponentgenerator.cpp  qcfcomponentgenerator.h  qcfgenerator.cpp  qcfgenerator.h  qcfgeneratorexception.h  qcftemplategenerator.cpp  qcftemplategenerator.h
src/mkfusion/mkfusion_isapi/: .gitignore  mkfusion_isapi.cpp  mkfusion_isapi.def  mkfusion_isapi.pro
src/mkfusion/mkfusion_worker/: mkfusion_worker.pro
src/mkfusion/mod_mkfusion/: mod_mkfusion.cpp  mod_mkfusion.pro
src/mkfusion/servicecontrol/: main.cpp  servicecontrol.pro
src/mkfusion/simplifiedlocalsocket/: qsimplifiedlocalsocket.h  qsimplifiedlocalsocket_unix.cpp  qsimplifiedlocalsocket_win.cpp
src/mkfusion/uninstall/: uninstall.cpp  uninstall.h  uninstall.pro
src/tests/: CMakeLists.txt  tests.pro
src/tests/cf7debugger/: .gitignore  CMakeLists.txt  cf7debugger.pro  main.cpp  qappmainwindow.cpp  qappmainwindow.h  qjdwpclassesbysignaturecommand.cpp  qjdwpclassesbysignaturecommand.h  qjdwpcommand.cpp  qjdwpcommand.h  qjdwpdebugger.cpp  qjdwpdebugger.h  qjdwpgetpathseparatorcommand.cpp  qjdwpgetpathseparatorcommand.h  qjdwpidsizescommand.cpp  qjdwpidsizescommand.h  qjdwpsocket.cpp  qjdwpsocket.h
src/tests/cf7debugger/docs/: jdwp-spec.html
src/tests/cf7debugger/docs/jdwp/: jdwp-protocol.html
src/tests/cfbenchmark/: CMakeLists.txt  cfbenchmark.pro  main.cpp  pi_opt.h  pi_opt2.h  pi_orig.h
src/tests/editwidget/: editwidget.pro  main.cpp  qappmaindialog.cpp  qappmaindialog.h  qappmaindialog.ui
src/tests/parsertest1/: main.cpp  parsertest1.cpp  parsertest1.h  parsertest1.pro  parsertest1.qrc  parsertest1.ui  qdetail.cpp  qdetail.h  qdetail.ui
src/tests/parsertest1_new/: main.cpp  parsertest1.cpp  parsertest1.h  parsertest1.ui  parsertest1_new.cpp  parsertest1_new.h  parsertest1_new.pro  qdetail.cpp  qdetail.h
src/tests/parsertest1_old/: .gitignore  main.cpp  parsertest1.cpp  parsertest1.h  parsertest1.rc  parsertest1.ui  parsertest1_old.pro  qdetail.cpp  qdetail.h  qdetail.ui
src/tests/parsertest2/: .gitignore  main.cpp  main.h  parsertest2.pro  test.cfm
src/tests/rdstest/: .gitignore  main.cpp  rdstest.pro
src/tests/sftptest/: main.cpp  sftptest.pro
src/tests/test_simplifiedlocalsocket/: main.cpp  test.pro
src/tests/test_textparser/: main.cpp  test_textparser.pro
src/tests/testcasetester/: comparedialog.cpp  comparedialog.h  comparedialog.ui  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  testcasetester.pro
src/tests/textparser/: main.cpp  textparser.pro
src/textparser/: ColdFusion.xml  HTML.xml  PHP.xml  qtextparser.cpp  qtextparser.h  qtextparsercompat.cpp  qtextparsercompat.h  qtextparserelement.cpp  qtextparserelement.h  qtextparserlanguagedefinition.cpp  qtextparserlanguagedefinition.h  qtextparserlanguagedefinitiontoken.cpp  qtextparserlanguagedefinitiontoken.h  qtextparserline.cpp  qtextparserline.h
